2021-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (print_help): --script to --source.
	Rename SCRIPT_ARG to SOURCE_ARG.
	(long_options): Likewise.
	(parse_args_2): Update accordingly.
	* doc/poke.texi (Invoking poke): Update accordingly.

2021-01-28  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* pickles/mbr.pk: New pickle.
	* pickles/Makefile.am (dist_pickles_DATA): Add `mbr.pk`.
	* testsuite/poke.pickles/mbr-test.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-01-28  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/pkl-gen.pks (struct_writer): Fix bit-offset of mapped
	integral struct.
	* testsuite/poke.map/maps-int-structs-21.pk: New test.
	* testsuite/poke.map/maps-int-structs-22.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-23.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-24.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-25.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-26.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-27.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-28.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-01-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-env.c (get_registered): The empty string is never
	recognized as the name of a registered declaration.
	* libpoke/pkl-tab.y (struct_type_field): Register anonymous struct
	fields in the lexical environment.
	* testsuite/poke.map/maps-structs-anonfield-1.pk: New test.
	* testsuite/poke.map/maps-structs-anonfield-2.pk: Likewise.
	* testsuite/poke.map/maps-structs-anonfield-3.pk: Likewise.
	* testsuite/poke.pkl/scons-anon-field-1.pk: Likewise.
	* testsuite/poke.pkl/scons-anon-field-2.pk: Likewise.
	* testsuite/poke.pkl/scons-anon-field-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-01-25  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/pkl-rt.pk (exception_code): New function.
	* doc/poke.texi (Exceptions): Add documentation for `exception_code`.
